# pipecat

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/foundational/: deepdub_tts_basic.py
src/pipecat_deepdub_tts/: __init__.py  tts.py
tests/: test_example_basic.py  test_tts.py
